Version 1.8.8
- BUG: Issue #640: Restore after commit - Unchecked
       files are not restored upon commit. (Stefan)
- BUG: Issue #641: svn:global-ignores does not work
       with multiple targets selected. (Stefan)

Version 1.8.7
- BUG: Issue #633: Relocate dialog does
       not remember urls. (Stefan)
- BUG: Issue #634: Repo browser does not
       show nested externals. (Stefan)
- BUG: Issue #635: externals property not correctly
       converted to a relative url. (Stefan)
- BUG: Issue #636: externals property dialog does not
       handle multiple selections. (Stefan)
- BUG: Issue #637: TortoiseMerge fails to detect
       utf16 files if BOM is missing. (Stefan)
- BUG: Issue #638: log dialog filter not fully
       reapplied after refresh. (Stefan)
- BUG: Issue #639: File externals not
       committed. (Stefan)

Version 1.8.6
- BUG: Issue #617: Checkbox size too big on Aero
       area in high dpi mode. (Stefan)
- BUG: Issue #619: "show log" from merge dialog fetches
       all revisions if no revision range is specified. (Stefan)
- BUG: Issue #621: Export Log Cache did not
       export to the expected path. (Sup Yut Sum)
- BUG: Issue #620: merge message truncates url. (Stefan)
- BUG: Issue #622: generated merge message contains
       too many entries. (Stefan)
- CHG: Issue #624: in page error writing log file. (Stefan)
- BUG: Issue #626: Applying patch can find
       wrong "better" path. (Stefan)
- BUG: Issue #628: Invalid urls in repobrowser
       for SVNParentPath. (Stefan)
- BUG: Issue #629: log dialog closes merge
       dialog. (Stefan)
- BUG: Issue #630: svn:global-ignores not
       used when adding. (Stefan)
- BUG: Issue #631: Assertion when showing properties
       dialog for url. (Stefan)

Version 1.8.5
- BUG: Issue #594: "Diff with url" generated
       patch does not apply. (Stefan)
- BUG: Issue #497: "restore after commit" must
       restore on cancel as well. (Stefan)
- BUG: Issue #595: TortoisePlink crash
       for x64. (Stefan)