@@ -3,6 +3,8 @@ Version 1.8.8
        files are not restored upon commit. (Stefan)
 - BUG: Issue #641: svn:global-ignores does not work
        with multiple targets selected. (Stefan)
+- BUG: Issue #642: Log message not saved in history
+       on cancel. (Stefan)
 
 Version 1.8.7
 - BUG: Issue #633: Relocate dialog does
